fix: add code to profile name to prevent text overflow

--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -4,6 +4,10 @@
     line-height: 56px;
     text-align: center;
     margin: 10px 0 0 25px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    max-width: 380px;
 }
 
 @media screen and (min-width: 768px) {
